# euphoria-bot

./: .gitignore  Cargo.toml
server/: .gitignore  Cargo.toml  README  dev.http
server/migrations/: 20220612124959_user.up.sql
server/src/: main.rs  regex.rs  user.rs
server/src/bot/: cache.rs  flirting.rs  mod.rs  user.rs  voice.rs
server/src/manager/: auth.rs  database.rs  mod.rs  users.rs
server/src/server/: error.rs  mod.rs  session.rs
src/: database.rs  main.rs  tables.sql  user.rs  voice.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/app/: Header.tsx  Main.tsx  store.ts  themes.ts
web/src/features/: Settings.tsx  api-slice.ts
web/src/features/connections/: connection-bridge.ts  connection-slice.ts
web/src/features/settings/: Settings.tsx  trigger-words.ts
