[package]
name = "euphoria-bot"
version = "0.1.0"
authors = ["Kitten <very.gay.kitten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttplug = "3.0"
serenity = { version = "0.10.9", features = ["collector"] }
tokio = { version = "1.5", features = ["macros", "time"] }
futures = "0.3.14"
regex = "1.4.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
color-eyre = "0.5.11"
