[package]
name = "euphoria-bot"
version = "0.1.0"
authors = ["Kitten <very.gay.kitten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
buttplug = "5.1.10"
serenity = { version = "0.10.9", features = ["collector", "voice"] }
tokio = { version = "1.5", features = ["macros", "time", "sync"] }
futures = "0.3.14"
regex = "1.4.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
color-eyre = "0.5.11"
songbird = "0.2.1"

actix-web = { version = "4.0.1", features = ["rustls"] }
actix = "0.13.0"
actix-buttplug = { path = "../../actix-buttplug" }
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
chrono = { version = "0.4", features = ["clock"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "offline", "postgres", "chrono"] }
serde = { version="1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = "0.11.10"
async-scoped = { version = "0.7.0", features = ["use-tokio"] }
thiserror = "1.0.31"
actix-cors = "0.6.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
